added full set of zfourge decomposed data into a local project directory

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Eazy Template Extractions/cdfs.v1.6.1.h5
 Eazy Template Extractions/zfourgeSEDs/*
 *.h5
 datasets/student_fits_files/*
+datasets/full_zfourge_decomposed/*
